Fixed event wrap Images height

--- a/css/style.css
+++ b/css/style.css
@@ -854,7 +854,9 @@ ul.tabs-nav .tab-nav.active {
 
 .event-wrap figure img {
     display: block;
-    width: 100%;
+    object-fit: cover;
+    width: 144px;
+    height: 144px;
 }
 
 .event-content-wrap {
